--- a/popUp/index.html
+++ b/popUp/index.html
@@ -2,9 +2,13 @@
 <html>
 <head>
     <script src="index.js"></script>
+    <link rel="stylesheet" type="text/css" href="index.css" />
     <title>Hello World</title>
 </head>
 <body>
-    <h1>Hello World xD xD</h1>
+
+    <input/>
+    <button> EITA </button>
+
 </body>
 </html>
