adicionando textarea, select, button e alterando a cor de fundo

--- a/popUp/index.html
+++ b/popUp/index.html
@@ -7,8 +7,14 @@
 </head>
 <body>
 
-    <input/>
-    <button> EITA </button>
+    <textarea name="" id="" cols="30" rows="10"></textarea>
+    <!-- O segundo valor estará selecionado inicialmente -->
+    <select name="select">
+        <option value="" selected>Estudar</option>
+        <option value="" >Pagar contas</option>
+        <option value="">Passear com cachorro</option>
+    </select>
+    <button>Ok</button>
 
 </body>
 </html>
