Preparing the link between Config, Background and front application

--- a/popUp/index.html
+++ b/popUp/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <script src="index.js"></script>
-    <link rel="stylesheet" type="text/css" href="index.css" />
-    <title>Hello World</title>
-</head>
-<body>
-
-    <textarea name="" id="" cols="30" rows="10"></textarea>
-    <!-- O segundo valor estará selecionado inicialmente -->
-    <select name="select">
-        <option value="" selected>Estudar</option>
-        <option value="" >Pagar contas</option>
-        <option value="">Passear com cachorro</option>
-    </select>
-    <button>Ok</button>
-
-</body>
+<html lang="pt-BR">
+    <head>
+        <script defer src="index.js"></script>
+        <link rel="stylesheet" type="text/css" href="index.css" />
+        <title>Hello World</title>
+    </head>
+    <body>
+        <textarea name="" id="note-to-add" cols="30" rows="10"></textarea>
+        <select name="select">
+            <option value="" selected>Estudar</option>
+            <option value="" >Pagar contas</option>
+            <option value="">Passear com cachorro</option>
+        </select>
+        <button id="submit-button">Ok</button>
+    </body>
 </html>
