Adicionando inputs, salvando no local storage e mostrando a informação no select

--- a/popUp/index.html
+++ b/popUp/index.html
@@ -3,15 +3,18 @@
     <head>
         <script defer src="index.js"></script>
         <link rel="stylesheet" type="text/css" href="index.css" />
-        <title>Hello World</title>
+        <title>Eureka</title>
     </head>
     <body>
-        <textarea name="" id="note-to-add" cols="30" rows="10"></textarea>
-        <select name="select">
-            <option value="" selected>Estudar</option>
+        <label for="duties">Tarefa:</label>
+        <input type="text" id="duties" name="duties" placeholder="Digite o nome da sua tarefa"><button id="submit-button">Adicionar</button>
+        <textarea name="" id="note-to-add" cols="36" rows="10"></textarea>
+        <select name="select" id="task">
+            <option value="" selected id="option">Estudar</option>
             <option value="" >Pagar contas</option>
             <option value="">Passear com cachorro</option>
         </select>
-        <button id="submit-button">Ok</button>
+        <button id="">Buscar</button>
+        <a href="../options/index.html">Home Page</a>
     </body>
 </html>
