salvando e recuperando informações do localstorage

--- a/popUp/index.html
+++ b/popUp/index.html
@@ -10,9 +10,7 @@
         <input type="text" id="duties" name="duties" placeholder="Digite o nome da sua tarefa"><button id="submit-button">Adicionar</button>
         <textarea name="" id="note-to-add" cols="36" rows="10"></textarea>
         <select name="select" id="task">
-            <option value="" selected id="option">Estudar</option>
-            <option value="" >Pagar contas</option>
-            <option value="">Passear com cachorro</option>
+            <option value="" id="option"></option>
         </select>
         <button id="">Buscar</button>
         <a href="../options/index.html">Home Page</a>
