adicionando botao de deletar tarefas

--- a/popUp/index.html
+++ b/popUp/index.html
@@ -12,7 +12,7 @@
         <select name="select" id="task">
             <option value="" id="option"></option>
         </select>
-        <button id="">Buscar</button>
+        <button id="delete">Deletar</button>
         <a href="../options/index.html">Home Page</a>
     </body>
 </html>
