--- a/options/index.html
+++ b/options/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <script src="index.js"></script>
-    <title>Hello World</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="index.js" defer></script>
+    <link rel="stylesheet" href="index.css">
+    <title>Option</title>
 </head>
 <body>
-    <h1>Hello World xD xD</h1>
+    <input type="search" id="search-input" placeholder="Digite para buscar...">
+    <table>
+        <thead>
+          <tr>
+            <th scope="col">Nome</th>
+            <th scope="col">Tarefa</th>
+            <th scope="col">Data</th>
+          </tr>
+        </thead>
+        <tbody>
+         
+        </tbody>
+      </table>
+
+    <a href="../popUp/index.html" class="option-btn">Eureka</a>
 </body>
 </html>
